auth/authelia/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy: { type: Recreate }

  template:
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: authelia
          args:
            - authelia
            - --config.experimental.filters=template
          ports:
            - { name: http, containerPort: 9091 }
          volumeMounts:
            - name: config
              mountPath: /config/configuration.yml
              subPath: configuration.yml
              readOnly: true
            - name: credentials
              mountPath: /var/run/secrets/icanwalkonwater.dev
              readOnly: true
            - name: data
              mountPath: /data
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: authelia-config
            items: [{ key: configuration.yml, path: configuration.yml }]
        - name: credentials
          secret:
            secretName: authelia-credentials
            items:
              - { key: SESSION_SECRET, path: session-secret.txt }
              - { key: RESET_PASSWORD_JWT_SECRET, path: reset-password-jwt-secret.txt }
              - { key: STORAGE_ENCRYPTION_KEY, path: storage-encryption-key.txt }
              - { key: LDAP_PASSWORD, path: ldap-password.txt }
              - { key: OIDC_HMAC_SECRET, path: oidc-hmac-secret.txt }
              - { key: OIDC_JWK_KEY, path: oidc-jwk-key.pem }
        - name: data
          persistentVolumeClaim: { claimName: authelia-data-pvc }
