auth/authelia/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authelia
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
  replicas: 1
  serviceName: authelia

  template:
    metadata:
      labels:
        app.kubernetes.io/name: authelia
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4.38.10
          args:
            - --config.experimental.filters=template
          ports:
            - name: http
              containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config/configuration.yml
              subPath: configuration.yml
              readOnly: true
            - name: credentials
              mountPath: /config/creds
              readOnly: true
            - name: certificate
              mountPath: /config/certs
              readOnly: true
            - name: storage
              mountPath: /data
          resources:
            limits:
              cpu: 1000m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: authelia-config
        - name: credentials
          secret:
            secretName: authelia-credentials
        - name: certificate
          secret:
            secretName: authelia-tls

  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: [ReadWriteOncePod]
        storageClassName: local-path-fast
        resources:
          requests:
            storage: 1Gi
