auth/authelia/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9091
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-metrics
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9959
      protocol: TCP
      targetPort: metrics
