auth/authelia/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: identifie.mon.enorme.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: authelia, port: { name: http } }
  tls:
  # use default certificate
    - hosts:
        - '*.mon.enorme.uk'
